--- a/QtOpenGlAnimatiom/QtOpenGlAnimatiom.vcxproj.filters
+++ b/QtOpenGlAnimatiom/QtOpenGlAnimatiom.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Mesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MeshCommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Window3D.h">
@@ -113,6 +116,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
