--- a/QtOpenGlAnimatiom/QtOpenGlAnimatiom.vcxproj.filters
+++ b/QtOpenGlAnimatiom/QtOpenGlAnimatiom.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="MeshCommand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Window3D.h">
@@ -119,6 +122,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MeshCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
