--- a/QtOpenGlAnimatiom/QtOpenGlAnimatiom.vcxproj
+++ b/QtOpenGlAnimatiom/QtOpenGlAnimatiom.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="ObjLoader.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="VertexIndexBuffer.cpp" />
     <ClCompile Include="Window3D.cpp" />
   </ItemGroup>
@@ -126,6 +127,7 @@
     <ClInclude Include="ObjLoader.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="VertexIndexBuffer.h" />
   </ItemGroup>
   <ItemGroup>
