--- a/QtOpenGlAnimatiom/QtOpenGlAnimatiom.vcxproj.filters
+++ b/QtOpenGlAnimatiom/QtOpenGlAnimatiom.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HellowWorld.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Window3D.h">
@@ -125,6 +128,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HellowWorld.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
